studied mox bank design and many things need to implement

--- a/DotnetFinancialTrackerApp/wwwroot/index.html
+++ b/DotnetFinancialTrackerApp/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="DotnetFinancialTrackerApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="js/focus-helper.js"></script>
 </head>
 
 <body>
