--- a/DotnetFinancialTrackerApp/wwwroot/index.html
+++ b/DotnetFinancialTrackerApp/wwwroot/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/consolidated-app.css" />
     <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" />
     <link rel="stylesheet" href="DotnetFinancialTrackerApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
